use awaitility instead of countdown latches